--- a/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.tex
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.tex
@@ -287,7 +287,7 @@ An alternative approach is to use the result in \eqref{eq:const_singular_values}
 \text{ and } \boldsymbol{U}^\top \boldsymbol{U} = \boldsymbol{I}
 \label{eq:orthonormal_constraints}
 \end{align}
-The training criterion is now smooth at the its minimizer.
+The locally equivalent training criterion is now smooth at its minimizer.
 The gradient optimality conditions with respect to $\boldsymbol{\Gamma}$ can be taken with respect to the basis 
 \begin{align}
 \left \{
@@ -332,7 +332,7 @@ Note that this basis is quite different from that used in Algorithm \ref{alg:gra
 \end{split}
 \label{eq:grad_opt_matrix_comp}
 \end{align}
-where $(\cdot)_T$ zeroes out matrix elements that are not observed in the training set. The gradient optimality conditions with respect to $\boldsymbol{\eta}$ and $\boldsymbol{\gamma}$ are derived using the usual procedure. To get the partial derivatives of the fitted values with respect to $\boldsymbol{\lambda}$, we implicitly differentiate the gradient optimality conditions, as well as \eqref{eq:orthonormal_constraints}, with respect to $\boldsymbol{\lambda}$ and solve the resulting system of linear equations. The gradient of the validation loss with respect to the penalty parameters is easy to calculate once the partial derivatives are obtained.
+where $(\cdot)_T$ zeroes out matrix elements that are not observed in the training set. The gradient optimality conditions with respect to $\boldsymbol{\eta}$ and $\boldsymbol{\gamma}$ are derived using the usual procedure. To get the partial derivatives of the fitted values with respect to $\boldsymbol{\lambda}$, we implicitly differentiate the gradient optimality conditions, as well as \eqref{eq:orthonormal_constraints}, with respect to $\boldsymbol{\lambda}$ and solve the resulting system of linear equations. The gradient of the validation loss with respect to the penalty parameters is straightforward to calculate once the partial derivatives are obtained. However, we omit this tedious calculation.
 
 We now show that the conditions in Theorem~\ref{thethrm} are satisfied.
 \begin{itemize}
