--- a/jcgs_reviewer/reviewer_1.tex
+++ b/jcgs_reviewer/reviewer_1.tex
@@ -24,10 +24,9 @@
 	We appreciate the helpful feedback from the reviewer. We have addressed your questions and comments. Below we give a point-by-point response to each of the questions:
 	
 	\subsubsection*{Overall comment}
-	\overall{Although the idea of a using a larger set of regularization parameters is interesting, the empirical results are incomplete and including additional scenarios would help strengthen the paper}
+	\overall{This paper studies regularization parameter optimization via gradient descent when the training criterion is almost everywhere smooth. The authors note that the main advantage of gradient-based approaches over gradient-free approaches is their ability to handle a much larger set of regularization parameters. The methods discussed in the paper - elastic net, additive models with smoothness and sparsity penalties, and the sparse lasso - typically involve only two regularization parameters. The authors instead propose using a larger set of regularization parameters for the latter two models and present empirical results that suggest that the addition of more regularization parameters can improve performance. Although the idea of a using a larger set of regularization parameters is interesting, the empirical results are incomplete and including additional scenarios would help strengthen the paper. The following is a list of specific suggestions and comments for the authors.}
 	
-	We apologize for omitting simulation details. We have updated the paper accordingly.\textcolor{red}{which sections have new things?}
-	We have also included a new, very different, example illustrating the application of our ideas to matrix completion. This example moves away from the simple regression framework and considers matrix-valued data with partially observed entries (and an assumed low-rank structure). The problem now involves minimizing a penalized loss function with a nuclear norm penalty. This joint optimization problem has a much more complex differentiable space compared to the other examples. We had to rely on different representations of this differentiable space in order to (1) show that the conditions of Theorem 1 were satisfied and (2) calculate the gradient. We added three new sections: Section 2.4.4 introduces low-rank matrix completion and illustrates how to transform the joint optimization problem into an equivalent smooth joint optimization problem; Section 3.4 provides simulation results; Section A.3.4 in the Appendix provides more details on how to calculate the gradient and shows the conditions in Theorem 1 are satisfied.
+	We apologize for omitting simulation details and have updated Section 3 accordingly (we address the specific changes in the point-by-point response below). We have also included a new, very different, example illustrating the application of our ideas to matrix completion. This example moves away from the simple regression framework and considers matrix-valued data with partially observed entries (and an assumed low-rank structure). The problem now involves minimizing a penalized loss function with a nuclear norm penalty. This joint optimization problem has a much more complex differentiable space compared to the other examples. We had to rely on different representations of this differentiable space in order to (1) show that the conditions of Theorem 1 were satisfied and (2) calculate the gradient. We added three new sections: Section 2.4.4 introduces low-rank matrix completion and illustrates how to transform the joint optimization problem into an equivalent smooth joint optimization problem; Section 3.4 provides simulation results; Section A.3.4 in the Appendix provides more details on how to calculate the gradient and shows the conditions in Theorem 1 are satisfied.
 		
 	\subsubsection*{Specific Suggestions/comments}
 	
@@ -84,15 +83,10 @@ n = 90 in the other two cases?}
 		
 		\point{In Table 4, could the authors provide intuition for why there is a large difference in validation error and test error for gradient descent?}
 		
-		\reply We have added a new paragraph in Section 3.3 to provide some intuition for the large difference between validation and test error. We include it below:
+		\reply We have added a new paragraph in Section 3 to provide some intuition for the large difference between validation and test error. We include it below:
 		\begin{quote}
-			The validation errors of the un-pooled sparse group lasso models fit by gradient descent were much smaller than the test errors. This difference between the validation and test errors can be attributed to a change in the bias-variance tradeoff. The un-pooled sparse group lasso has more penalty parameters and thus a larger model space. That is, its fitted models have smaller bias but larger variance. Depending on the parameter-tuning method, the improvement in bias may outweigh the additional variance. Since gradient descent could effectively minimize the validation loss, the test error was low. On the other hand, Nelder-mead and Spearmint were unable to find penalty parameter settings with small validation loss, so their test errors were high.
+			In some of the examples, the models with many penalty parameters fit by gradient descent have much smaller validation errors compared to the test errors. The difference is particularly pronounced in the un-pooled sparse group lasso example in Section 3.3. There are two reasons for this behavior. First, the additional tuning parameters increase the model space and thus the “degrees of freedom.” Degrees of freedom relate directly to over-optimism (Tibshirani 2015). Traditionally one thinks of over-optimism as the difference between a model’s performance on future data and its training error. In the case of hyper-parameter tuning, performance on the validation data is the analog of the “training error.” The second reason is that gradient descent can effectively find a near minimizer on the validation data in contrast to Nelder-mead and Spearmint. By failing to minimize the validation data, the latter two methods is similar to ending gradient descent before it has reached convergence. This technique called “early stopping” is another form of regularization that can control the degree of over-optimism (Yao et al. 2007). Hence the difference between the validation and test error is greater in gradient descent compared to Nelder-mead and Spearmint.
 		\end{quote}
-		{\color{red}{I think I would write this a bit differently --- also is this true for other models fit by gradient descent? Or just the unpooled-sparse-group-lasso? Something like the following (only better)}
-		\begin{quote}
-			The validation errors of the un-pooled sparse group lasso models fit by gradient descent were much smaller than the test errors. We see this difference because our algorithm more effectively adapts to the validation data.
-			 This additional adaptation comes from a) using additional tuning parameters; and b) effectively finding a near minimizer on the validation data. This is analogous to using more ``degrees of freedom'' in our fit. Degrees of freedom relate directly to over-optimism (CITE BRAD). Polynomial regression gives a different, though very similar, illustrative example. In univariate regression one might compare using a linear vs a quadratic model for fitting a truly quadratic function. Unless there are very few observations, the quadratic model will do much better than the linear model (both on the training data, and future data). Nevertheless the ``over-optimism'' of the quadratic model (the difference between its performance on future data vs its training error) will be larger than that of linear regression (using 3 degrees of freedom rather than 2). In our case, for hyper-parameter tuning, performance on the validation data is our ``training error'' analog. POSSIBLY ALSO RELATE NELDER MEAD/SPEARMINT TO EARLY STOPPED IN PENALIZED REGRESSION. (and how that has lower degrees of freedom --- it is related to ridge regression)
-		\end{quote}}
 		
 	\end{enumerate} 
 	
