--- a/nonsmooth_rewrite/hillclimbing_nonsmooth.bib
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth.bib
@@ -405,4 +405,24 @@ squares (NIPALS) approach},
   publisher={JSTOR}
 }
 
+@article{yao2007early,
+  title={On early stopping in gradient descent learning},
+  author={Yao, Yuan and Rosasco, Lorenzo and Caponnetto, Andrea},
+  journal={Constructive Approximation},
+  volume={26},
+  number={2},
+  pages={289--315},
+  year={2007},
+  publisher={Springer}
+}
+
+@article{tibshirani2015degrees,
+  title={Degrees of freedom and model search},
+  author={Tibshirani, Ryan J},
+  journal={Statistica Sinica},
+  pages={1265--1296},
+  year={2015},
+  publisher={JSTOR}
+}
+
 
